# rust-cloudevents

./: Cargo.toml  README.md  appveyor.yml
cloudevents/: Cargo.toml  README.md  README.tpl
cloudevents/src/: builder.rs  event.rs  helper.rs  lib.rs  v02.rs  v10.rs
cloudevents/src/common/: data.rs  extension.rs  mod.rs
cloudevents/src/v0_2/: builder.rs  event.rs  helper.rs  mod.rs
cloudevents/src/v1_0/: builder.rs  event.rs  helper.rs  mod.rs  tests.rs
cloudevents/tests/: v0_2.rs  v1_0.rs
src/: lib.rs
