[package]
name = "cloudevents"
version = "0.2.0"
authors = [
    "Kim Christensen <kimworking@gmail.com>",
    "Linus Basig <linus@basig.me>",
    "Fabrizio Lazzaretti <fabrizio@lazzaretti.me>"
]
description = "Implementation of the CloudEvents specification"
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["cloudevents"]
repository = "https://github.com/kichristensen/rust-cloudevents"

[dependencies]
serde_json = "1.0.42"
serde = "1.0.103"
serde_derive = "1.0.103"
chrono = { version = "0.4.10", features = ["serde"] }
failure = "0.1.6"
url = "2.1.0"
base64 = "0.11.0"